# PricingAndMore

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: CI.yml
docs/: heat_eq_engl.tex
src/: BinaryPricer.cpp  BinaryPricer.hpp  Fibonacci.cpp  Fibonacci.hpp  main.cpp  main_fib.cpp
tests/: CMakeLists.txt  test_FDM.cpp  test_FEM.cpp  test_Fib.cpp  test_MC_EU.cpp  test_closed_formula.cpp
